# tensorcontainer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  refactored.md
.github/workflows/: nightly.yml  pr-checks.yml  publish-nightly.yml  publish-release.yml  python-package.yml
docs/: compatibility.md  tensor_annotated.md  tensor_container.md  tensor_dataclass.md  tensor_distribution.md  testing.md
docs/developer_guide/: tensor_dataclass.md  testing.md
docs/development/: todo.md
docs/tensor_distribution/: development.md
docs/user_guide/: overview.md  tensor_dataclass.md  tensor_dict.md  tensor_dict.py  tensor_distribution.md  tensor_distribution_comprehensive.md
examples/: README.md
examples/tensor_dataclass/: 01_basic.py  02_indexing.py  03_shape_ops.py  04_stack.py  04_stack_cat.py  05_device.py  06_inheritance.py  06_nested_inheritance.py  07_copy_clone.py  08_detach_gradients.py  09_nested.py  README.md
examples/tensor_dict/: 01_basic.py  02_indexing.py  03_shape_ops.py  04_stack.py  05_device.py  07_copy_clone.py  08_detach_gradients.py  09_nested.py  10_dynamic_keys.py  11_mapping_interface.py  12_nested_dict_handling.py  13_flatten_keys.py  README.md
examples/tensor_distribution/: 01_basic.py  02_device_operations.py  03_shape_operations.py  04_indexing_slicing.py  05_stacking_concatenation.py  README.md
src/rtd/: tensor_container.py  tensor_dataclass.py  tensor_dict.py  tensor_distribution.py  utils.py  validation.py
src/tensorcontainer/: __init__.py  config.py  errors.py  protocols.py  tensor_annotated.py  tensor_container.py  tensor_dataclass.py  tensor_dict.py  tensor_distribution.py  types.py  utils.py
tests/: compile_utils.py  conftest.py  stubs.py  test_assert_pytrees_equal.py  test_compile_utils.py  test_tensor_distribution.py  test_tensordict.py  test_types.py  test_unsafe_construction.py
tests/distribution/: test_symlog.py
tests/tensor_annotated/: test_pytree_integration.py  test_subclassing.py
tests/tensor_container/: test_diagnose_pytree_structure_mismatch.py  test_repr.py  test_stack_cross_types.py  test_tensor_container.py
tests/tensor_dataclass/: __init__.py  conftest.py  test_attributes.py  test_cat.py  test_clone.py  test_copy.py  test_detach.py  test_device.py  test_expand.py  test_fields.py  test_getitem.py  test_init.py  test_memory_leaks.py  test_ndim.py  test_optional_fields.py  test_post_init_subclassing.py  test_pytree_integration.py  test_setitem.py  test_shape_operations.py  test_stack.py  test_subclassing.py  test_tensor_dataclass_tensor_dict_interaction.py  test_to.py  test_view_reshape.py
tests/tensor_dict/: common.py  compile_utils.py  test_casting.py  test_cat.py  test_clone.py  test_compile.py  test_compile2.py  test_copy.py  test_detach.py  test_device.py  test_expand.py  test_flatten_keys.py  test_getitem.py  test_graph_breaks.py  test_init.py  test_items.py  test_mask_select.py  test_math_ops.py  test_metadata.py  test_permute.py  test_pytree_integration.py  test_recompilations.py  test_repr.py  test_reshape.py  test_setitem.py  test_shape.py  test_squeeze_unsqueeze.py  test_stack.py  test_tensor_container.py  test_transpose.py  test_update.py  test_utils.py  test_view.py
tests/tensor_distribution/: conftest.py  test_base.py  test_bernoulli.py  test_beta.py  test_binomial.py  test_categorical.py  test_cauchy.py  test_chi2.py  test_continuous_bernoulli.py  test_dirac.py  test_dirichlet.py  test_distribution_copy.py  test_distribution_stack.py  (+45 more)
(+63 files in other folders)
