[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtd"
version = "0.2.16"
description = "Short description here"
authors = [{name="Your Name", email="you@example.com"}]
license = {text = "MIT"}
dependencies = [
    "torch"
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["deep learning", "tensordict", "pytorch"]
urls = {Homepage = "https://github.com/mctigger/research-tensordict"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.2,<8.0",
  # you can add extra test-related tools here:
  "pytest-cov",
  # "hypothesis",
  # "flake8",
]



[project.scripts]
test = "pytest"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=src"
