[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorcontainer"
version = "0.5.0"
description = "TensorDict-like functionality for PyTorch with PyTree compatibility and torch.compile support"
authors = [{name="Tim Joseph", email="tim@mctigger.com"}]
license = {text = "MIT"}
dependencies = [
    "torch"
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["deep learning", "tensordict", "pytorch"]
urls = {Homepage = "https://github.com/mctigger/tensor-container"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.2,<8.0",
  "pytest-cov",
  "ruff"

]



[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=src"
